# text-classifier

./: README.md  pyproject.toml  text_classifier.ipynb
data/sentiment_analysis/: readme.txt
