[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["mahmoud-salameh <mahmoud4561@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
sklearn = "^0.0"
jupyterlab = "^3.1.9"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
